Spacing & styling fix

--- a/styles/aboutgame.module.scss
+++ b/styles/aboutgame.module.scss
@@ -58,7 +58,7 @@
         bottom: 2%;
         left: 50%;
         transform: translate(-50%);
-      
+
         position: absolute;
         z-index: 1;
       }
@@ -71,57 +71,56 @@
       }
     }
   }
-  
 }
 
-  .instructions {
-    text-align: center;
-    flex-direction: column;
-    padding-top: 8%;
+.instructions {
+  text-align: center;
+  flex-direction: column;
+  padding-top: 50px;
+  padding-bottom: 4%;
+
+  .stages {
+    display: grid;
+    grid-template-columns: 35% 35%;
+    justify-content: center;
+    padding-top: 2%;
+  }
+
+  .actors {
+    display: inline-flex;
     padding-bottom: 4%;
-
-    .stages {
-      display: grid;
-      grid-template-columns: 35% 35%;
-      justify-content: center;
-      padding-top: 2%;
-    }
-
-    .actors {
-      display: inline-flex; 
-      padding-bottom: 4%;
-    }
-    svg {
-      padding-bottom: 10px;
-      margin: auto;
-      width: 80px;
-    }
-    h1 {
-      color: #9aca3c;
-      font-size: 60px;
-      margin: auto;
-    }
-    p {
-      color: #686767;
-      margin: auto;
-      font-size: 135%;
-      width: 80%;
-    }
   }
-
-  .project {
-    padding-top: 8%;
-    & > h1 {
-      font-size: 60px;
-    }
-    & > p {
-      width: 65%;
-      margin: auto;
-      text-align: center;
-      font-size: 30px;
-      color: #686767;
-    }
+  svg {
+    padding-bottom: 10px;
+    margin: auto;
+    width: 80px;
   }
+  h1 {
+    color: #9aca3c;
+    font-size: 60px;
+    margin: auto;
+  }
+  p {
+    color: #686767;
+    margin: auto;
+    font-size: 135%;
+    width: 80%;
+  }
+}
+
+.project {
+  padding-top: 8%;
+  & > h1 {
+    font-size: 60px;
+  }
+  & > p {
+    width: 65%;
+    margin: auto;
+    text-align: center;
+    font-size: 30px;
+    color: #686767;
+  }
+}
 
 .creators {
   padding-top: 3%;
@@ -180,9 +179,7 @@
   }
 }
 
-
 @media only screen and (max-width: 1220px) {
-
   .instructions {
     padding-bottom: 14%;
     .stages {
@@ -246,7 +243,6 @@
 }
 
 @media only screen and (max-width: 719px) {
-
   .instructions {
     h1 {
       font-size: 50px;
@@ -273,7 +269,7 @@
     }
     padding-bottom: 30%;
   }
-  
+
   .project {
     & > h1 {
       margin: auto;
