--- a/styles/map.module.scss
+++ b/styles/map.module.scss
@@ -39,11 +39,7 @@
 }
 
 .popup > div:nth-child(1) {
-  background: linear-gradient(
-    135deg,
-    rgba(255, 255, 255, 0.438),
-    rgba(255, 255, 255, 0.096)
-  );
+  background: rgba(255, 255, 255, 0.795);
   border: 1px solid rgb(255, 255, 255);
   backdrop-filter: blur(5px);
   font-family: "Open Sans";
