--- a/styles/questions.module.scss
+++ b/styles/questions.module.scss
@@ -13,8 +13,7 @@
 }
 
 .question {
-  margin: 80px 0;
-  height: 200px;
+  margin: 20px 0;
 
   h2 {
     font-size: 24px;
